# QtScxmlTrafficLight

./: CMakeLists.txt
include/QtSCXMLPLayground/: StopContinueDataModel.h  TrafficLightSimulationWidget.h  TrafficLightWidget.h
src/: StopContinueDataModel.cpp  TrafficLightSimulationFSM.scxml  TrafficLightSimulationWidget.cpp  TrafficLightUi.ui  TrafficLightWidget.cpp  main.cpp
